# Matrix

./: CMakeCache.txt  CMakeLists.txt  CPPLINT.cfg  CTestTestfile.cmake  Dockerfile  Makefile  README.md  cmake_install.cmake
.github/workflows/: CI.yaml
Testing/Temporary/: CTestCostData.txt
googletest/: googletest-distribution.cbp
googletest/googlemock/: gmock.cbp
googletest/googletest/: gtest.cbp
matrix/: CMakeLists.txt
matrix/include/: Matrix.h  Vector.h
matrix/src/: Matrix.cpp  Vector.cpp  main.cpp
matrix/tests/: CMakeLists.txt  FirstPointTests.cpp  FourthPointTest.cpp  SecondPointTests.cpp  SeventhPointTests.cpp  SixthPointTests.cpp  ThirdPointTest.cpp
scripts/: build.sh  run_linters.sh  run_memcheck.sh  run_tests.sh
src/cpp/: Matrix.cpp  Vector.cpp  VectorColumn.cpp  VectorRow.cpp
src/include/: Matrix.h  Vector.h  VectorColumn.h  VectorRow.h
test/: CMakeLists.txt  CTestTestfile.cmake  FirstPointTests.cpp  FourthPointTest.cpp  Makefile  SecondPointTests.cpp  SeventhPointTests.cpp  SixthPointTests.cpp  ThirdPointTest.cpp  cmake_install.cmake
